[package]
name = "sgn-proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.27.1", features = ["with-bytes"] }


[build-dependencies]
protobuf-codegen = { version = "2.27.1" }
protoc-rust = { version = "2.27.1" }
